--- a/config.yaml
+++ b/config.yaml
@@ -1,8 +1,8 @@
 # hugo server --minify --themesDir ../.. --baseURL=http://0.0.0.0:1313/theme/hugo-book/
 
-baseURL: https://example.com/
-title: Hugo Book
-theme: hugo-book
+baseURL: /
+title: TWEM
+# theme: hugo-book
 
 # Book configuration
 disablePathToLower: true
@@ -20,28 +20,33 @@ markup:
 # There are different options to translate files
 # See https://gohugo.io/content-management/multilingual/#translation-by-filename
 # And https://gohugo.io/content-management/multilingual/#translation-by-content-directory
+defaultContentLanguage: vi
 languages:
-  en:
-    languageName: English
-    contentDir: content.en
-    weight: 1
-  ru:
-    languageName: Russian
-    contentDir: content.ru
-    weight: 2
-  zh:
-    languageName: Chinese
-    contentDir: content.zh
-    weight: 3
+  vi:
+    languageName: Tiếng Việt
+    contentDir: content
+    weight: 0
+#  en:
+#    languageName: English
+#    contentDir: content.en
+#    weight: 1
+#  ru:
+#    languageName: Russian
+#    contentDir: content.ru
+#    weight: 2
+#  zh:
+#    languageName: Chinese
+#    contentDir: content.zh
+#    weight: 3
 
 menu:
   # before: []
   after:
     - name: "Github"
-      url: "https://github.com/alex-shpak/hugo-book"
+      url: "https://github.com/tiennm99/twem"
       weight: 10
-    - name: "Hugo Themes"
-      url: "https://themes.gohugo.io/hugo-book/"
+    - name: "Facebook"
+      url: "https://facebook.com/miti99/"
       weight: 20
 
 params:
@@ -73,7 +78,7 @@ params:
 
   # Set source repository location.
   # Used for 'Last Modified' and 'Edit this page' links.
-  BookRepo: https://github.com/alex-shpak/hugo-book
+  BookRepo: https://github.com/tiennm99/twem
 
   # (Optional, default 'commit') Specifies commit portion of the link to the page's last modified
   # commit hash for 'doc' page type.
@@ -107,12 +112,16 @@ params:
   # (Optional, experimental, default false) Enables portable links and link checks in markdown pages.
   # Portable links meant to work with text editors and let you write markdown without {{< relref >}} shortcode
   # Theme will print warning if page referenced in markdown does not exists.
-  BookPortableLinks: true
+  # BookPortableLinks: true
 
   # /!\ This is an experimental feature, might be removed or changed at any time
   # (Optional, experimental, default false) Enables service worker that caches visited pages and resources for offline use.
-  BookServiceWorker: true
+  # BookServiceWorker: true
 
   # /!\ This is an experimental feature, might be removed or changed at any time
   # (Optional, experimental, default false) Enables a drop-down menu for translations only if a translation is present.
-  BookTranslatedOnly: false
+  # BookTranslatedOnly: false
+
+module:
+  imports:
+    path: "github.com/alex-shpak/hugo-book"
