--- a/config.yaml
+++ b/config.yaml
@@ -90,7 +90,7 @@ params:
   # Enable "Edit this page" links for 'doc' page type.
   # Disabled by default. Uncomment to enable. Requires 'BookRepo' param.
   # Edit path must point to root directory of repo.
-  BookEditPath: edit/main/exampleSite
+  BookEditPath: edit/main
 
   # Configure the date format used on the pages
   # - In git information
