--- a/config.yaml
+++ b/config.yaml
@@ -3,6 +3,9 @@
 baseURL: /
 title: TWEM
 # theme: hugo-book
+module:
+  imports:
+    path: "github.com/alex-shpak/hugo-book"
 
 # Book configuration
 disablePathToLower: true
@@ -42,8 +45,11 @@ languages:
 menu:
   # before: []
   after:
+    - name: "Tiên Thiếu Sắc"
+      url: "https://tienthieusac.pages.dev/"
+      weight: 0
     - name: "Github"
-      url: "https://github.com/tiennm99/twem"
+      url: "https://github.com/tienthieusac/twem"
       weight: 10
     - name: "Facebook"
       url: "https://facebook.com/miti99/"
@@ -78,7 +84,7 @@ params:
 
   # Set source repository location.
   # Used for 'Last Modified' and 'Edit this page' links.
-  BookRepo: https://github.com/tiennm99/twem
+  BookRepo: https://github.com/tienthieusac/twem
 
   # (Optional, default 'commit') Specifies commit portion of the link to the page's last modified
   # commit hash for 'doc' page type.
@@ -121,7 +127,3 @@ params:
   # /!\ This is an experimental feature, might be removed or changed at any time
   # (Optional, experimental, default false) Enables a drop-down menu for translations only if a translation is present.
   # BookTranslatedOnly: false
-
-module:
-  imports:
-    path: "github.com/alex-shpak/hugo-book"
